# MangaDM

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml  release-and-publish.yml
MangaDM/: __init__.py  cli.py  mangadm.py
MangaDM/downloader/: downloader.py
MangaDM/utility/: __init__.py  logger.py  utility.py
completion/: MangaDM.fish
manga_dm/: __init__.py  cli.py  core.py
manga_dm/downloader/: downloader.py
manga_dm/utils/: __init__.py  logger.py  signal_handler.py  stats_manager.py  utility.py
mangadm/: __init__.py
mangadm/assets/: __init__.py  style.css
mangadm/components/: __init__.py  progress_bar.py
mangadm/core/: cli.py  downloader.py  mangadm.py
mangadm/utils/: __init__.py  logger.py  utility.py
src/mangadm/: __init__.py  __main__.py
src/mangadm/assets/: __init__.py
src/mangadm/cli/: __init__.py  cli_util.py  main.py
src/mangadm/components/: __init__.py  archiver.py  base_component.py  signal_handler.py  stats_manager.py  types.py
src/mangadm/core/: __init__.py  cli.py  mangadm.py  slide_loader.py
src/mangadm/utils/: __init__.py
